fix tag + about + test comment

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html ⚡ lang="en">
+<!doctype html>
+<html amp>
   {% include head.html %}
   <body>
     {% include header.html %}
