--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,7 @@ layout: default
         js.src = "//connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v2.8&appId=1648856605387429";
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));</script>
-      <div class="fb-comments" data-href="http://icovn.github.com" data-numposts="5"></div>
+      <div class="fb-comments" data-href="http://icovn.github.io" data-numposts="5"></div>
     </footer>
     <div class="bottom-teaser cf">
       <div class="isLeft">
