--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,19 @@
+<amp-analytics type="googleanalytics" id="analytics1">
+<script type="application/json">
+{
+  "vars": {
+    "account": "UA-53825430-2"
+  },
+  "triggers": {
+    "trackPageview": {
+      "on": "visible",
+      "request": "pageview"
+    }
+  }
+}
+</script>
+</amp-analytics>
+
 <header class="site-header">
   <a href="{{ site.baseurl }}/" class="logo"><span class="logo"><amp-img src="{{ site.baseurl }}{{ site.logo }}" width="48" height="48" /></span></a>
 
