--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,8 @@
 
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description | url_encode }}{% endif %}">
+  
+  <meta name="google-site-verification" content="PfwM0roAmHI87UCO04xqvdn7ZvtrnQnsH9q45OYbxew" />
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
