--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,5 +13,13 @@ layout: default
     Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
 
+  {% if page.tags %}
+    <p><strong>Tags:</strong>
+      {% for tag in page.tags %}
+        <a href="{{ site.baseurl }}/tags/#{{ tag | slugify }}">{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
+      {% endfor %}
+    </p>
+  {% endif %}
+
   {% include disqus.html %}
 </article>
